# OAKD_Camera_Virtualcam

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  main.cpp
.github/workflows/: commit-lint.yml  fedora-ci.yml  ubuntu-ci.yml
docker/: Dockerfile.fedora  Dockerfile.ubuntu
podman/: Dockerfile.fedora  Dockerfile.ubuntu  build_podman.sh
src/: CMakeLists.txt  main.cpp
src/include/: AppBridge.cpp  AppBridge.h  CLI11.hpp  CameraWorker.cpp  CameraWorker.h  ImageWriter.cpp  ImageWriter.h
src/patches/: std_except.patch
src/ui/: main.qml
